--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ padding:20px;
 width:90px;
 border-radius:20px;
 box-shadow:0 0 15px #00ff88;
-margin-top:15px;
+margin-top:10px;
 }
 
 .btn{
@@ -41,6 +41,7 @@ color:white;
 
 .green{background:#19a451;}
 .cali{background:#19b2a6;}
+.orange{background:#f59e0b;}
 .red{background:#ff3b3b;}
 
 .page{display:none;}
@@ -82,7 +83,6 @@ padding:7px 10px;
 border-radius:10px;
 box-shadow:0 0 8px white;
 }
-
 </style>
 </head>
 
@@ -92,53 +92,59 @@ box-shadow:0 0 8px white;
 
 <!-- HOME -->
 <div id="home">
-
 <img src="IMG_2044.jpeg" class="logo">
 <h1>GREEDFARM</h1>
 
 <button class="btn green" onclick="openPage('hash')">🍫 Hash</button>
 <button class="btn cali" onclick="openPage('cali')">🇺🇸 Cali</button>
+<button class="btn green" onclick="openPage('spain')">🇪🇸 Spain</button>
+<button class="btn orange" onclick="openPage('promo')">🔥 Promo</button>
 
 <a href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">
 <button class="btn red">💳 Payment</button>
 </a>
-
 </div>
 
 <!-- HASH -->
 <div id="hash" class="page">
 
-<div class="videoBox">
-<video controls src="VID_20260129_020719_108.mp4"></video>
-<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
-</div>
+<div class="videoBox"><video controls src="VID_20260129_020719_108.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
+<div class="videoBox"><video controls src="VID_20260212_024354_063.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
+<div class="videoBox"><video controls src="VID_20260218_211142_496.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
+<div class="videoBox"><video controls src="VID_20260218_212432_315.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
+<div class="videoBox"><video controls src="VID_20260218_213406_222.mov"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
+<div class="videoBox"><video controls src="telegram_video.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
 
 <button class="btn green" onclick="goHome()">⬅ Retour</button>
-
 </div>
 
 <!-- CALI -->
 <div id="cali" class="page">
 
-<div class="videoBox">
-<video controls src="VID_20260218_213405_917.mp4"></video>
-<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a>
-</div>
+<div class="videoBox"><video controls src="VID_20260218_212243_412.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
+<div class="videoBox"><video controls src="VID_20260218_213405_917.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
+<div class="videoBox"><video controls src="VID_20260218_213406_052.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
+<div class="videoBox"><video controls src="VID_20260218_213406_351.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
+<div class="videoBox"><video controls src="VID_20260218_213406_770.mp4"></video><a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">Commander</a></div>
 
 <button class="btn cali" onclick="goHome()">⬅ Retour</button>
-
 </div>
+
+<!-- SPAIN -->
+<div id="spain" class="page"><h2>Spain bientôt</h2><button class="btn green" onclick="goHome()">⬅ Retour</button></div>
+
+<!-- PROMO -->
+<div id="promo" class="page"><h2>Promo bientôt</h2><button class="btn orange" onclick="goHome()">⬅ Retour</button></div>
 
 </div>
 
 <div class="lang">
-<button onclick="langEffect()">FR</button>
-<button onclick="langEffect()">IT</button>
-<button onclick="langEffect()">EN</button>
+<button onclick="langClick()">FR</button>
+<button onclick="langClick()">IT</button>
+<button onclick="langClick()">EN</button>
 </div>
 
 <script>
-
 function openPage(id){
 document.getElementById("home").style.display="none";
 document.querySelectorAll(".page").forEach(p=>p.style.display="none");
@@ -150,11 +156,10 @@ document.querySelectorAll(".page").forEach(p=>p.style.display="none");
 document.getElementById("home").style.display="block";
 }
 
-function langEffect(){
+function langClick(){
 document.body.style.opacity="0.8";
-setTimeout(()=>{document.body.style.opacity="1"},150);
+setTimeout(()=>document.body.style.opacity="1",150);
 }
-
 </script>
 
 </body>
