--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GREEDFARM</title>
+
+<title>GreedFarm</title>
 
 <style>
 body{
 margin:0;
 font-family:Arial;
-background:url("IMG_2044.jpeg") center/cover fixed;
+background:#000;
 color:white;
 text-align:center;
+background-image:url("IMG_2044.jpeg");
+background-size:cover;
+background-position:center;
 }
 
 .overlay{
@@ -27,6 +31,10 @@ margin-top:20px;
 box-shadow:0 0 20px #00ff88;
 }
 
+h1{
+letter-spacing:4px;
+}
+
 .btn{
 display:block;
 margin:12px auto;
@@ -35,8 +43,8 @@ padding:16px;
 border-radius:16px;
 font-size:18px;
 font-weight:bold;
-color:white;
 text-decoration:none;
+color:white;
 }
 
 .hash{background:#1faa4b;}
@@ -56,39 +64,17 @@ border-radius:12px;
 
 video{width:100%;border-radius:10px;}
 
-.price{margin-top:8px;color:#00ff88;font-weight:bold;}
+.price{margin-top:8px;font-weight:bold;color:#00ff88;}
 
 .order{
 display:inline-block;
-margin-top:8px;
+margin-top:10px;
 padding:8px 18px;
 background:#00ff88;
+border-radius:10px;
 color:black;
 font-weight:bold;
-border-radius:10px;
 text-decoration:none;
-}
-
-.cartBtn{
-position:fixed;
-bottom:20px;
-right:20px;
-background:#00ff88;
-padding:14px;
-border-radius:50%;
-font-size:20px;
-cursor:pointer;
-}
-
-.cartBox{
-display:none;
-position:fixed;
-bottom:80px;
-right:20px;
-background:black;
-padding:15px;
-border-radius:12px;
-width:220px;
 }
 
 .lang{
@@ -117,26 +103,55 @@ box-shadow:0 0 8px #fff;
 
 <a class="btn hash" onclick="openCat('hash')">🍫 Hash</a>
 <a class="btn cali" onclick="openCat('cali')">🇺🇸 Cali</a>
-<a class="btn spain" onclick="openCat('spain')">🇪🇸 Spagna</a>
+<a class="btn spain" onclick="openCat('spain')">🇪🇸 Spain</a>
 <a class="btn promo" onclick="openCat('promo')">🔥 Promozioni</a>
 <a class="btn pay" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">💳 Pagamento</a>
 
 <!-- HASH -->
 <div id="hash" class="section">
-<div class="video"><video src="VID_20260129_020719_108.mp4" controls></video><div class="price">Fresh Frozen  Mountain Giantspassed</div><a class="order" href="#">ORDINA</a><button onclick="addCart('Static Mountain Giants')">🛒</button></div>
-<div class="video"><video src="VID_20260212_024354_063.mp4" controls></video><div class="price">Frozen Fruitella</div><a class="order" href="#">ORDINA</a><button onclick="addCart('Frozen Fruitella')">🛒</button></div>
-<div class="video"><video src="VID_20260218_211142_496.mp4" controls></video><div class="price">Premium Frozen</div><a class="order" href="#">ORDINA</a><button onclick="addCart('Premium Frozen')">🛒</button></div>
+
+<div class="video">
+<video src="VID_20260129_020719_108.mp4" controls></video>
+<div class="price">FreshFrozen 
+  Static Mountain Giants</div>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
+</div>
+
+<div class="video">
+<video src="VID_20260212_024354_063.mp4" controls></video>
+<div class="price">Frozen Fruitella</div>
+<a class="order" href="https://signal.me/#eu/7uo8JDWQw_eAlZMD7G52l1FMoH0cO4vfZrj2CdaREAJdkTsVOGNPx4omsTJmkm9I">ORDINA</a>
+</div>
+
+<div class="video">
+<video src="VID_20260218_211142_496.mp4" controls></video>
+<div class="price">Premium Frozen</div>
+<a class="order" href="#">ORDINA</a>
+</div>
+
 </div>
 
 <!-- CALI -->
 <div id="cali" class="section">
-<div class="video"><video src="VID_20260218_213405_917.mp4" controls></video><div class="price">Super Runtz</div><a class="order" href="#">ORDINA</a><button onclick="addCart('Super Runtz')">🛒</button></div>
-<div class="video"><video src="VID_20260218_213406_052.mp4" controls></video><div class="price">Sherbert Gelato</div><a class="order" href="#">ORDINA</a><button onclick="addCart('Sherbert Gelato')">🛒</button></div>
+
+<div class="video">
+<video src="VID_20260218_212243_412.mp4" controls></video>
+<div class="price">Wedding Cake</div>
+<a class="order" href="#">ORDINA</a>
 </div>
 
-<!-- SPAIN -->
-<div id="spain" class="section">
-<div class="video"><video src="VID_20260218_212243_412.mp4" controls></video><div class="price">Wedding Cake</div><a class="order" href="#">ORDINA</a><button onclick="addCart('Wedding Cake')">🛒</button></div>
+<div class="video">
+<video src="VID_20260218_213405_917.mp4" controls></video>
+<div class="price">Super Runtz</div>
+<a class="order" href="#">ORDINA</a>
+</div>
+
+<div class="video">
+<video src="VID_20260218_213406_052.mp4" controls></video>
+<div class="price">Sherbert Gelato</div>
+<a class="order" href="#">ORDINA</a>
+</div>
+
 </div>
 
 <div class="lang">
@@ -145,31 +160,12 @@ box-shadow:0 0 8px #fff;
 <div>EN</div>
 </div>
 
-<div class="cartBtn" onclick="toggleCart()">🛒</div>
-
-<div class="cartBox" id="cartBox">
-<h3>Carrello</h3>
-<ul id="cartList"></ul>
-</div>
-
 </div>
 
 <script>
 function openCat(id){
 document.querySelectorAll(".section").forEach(s=>s.style.display="none");
 document.getElementById(id).style.display="block";
-}
-
-let cart=[];
-function addCart(n){cart.push(n);updateCart();}
-function updateCart(){
-let list=document.getElementById("cartList");
-list.innerHTML="";
-cart.forEach(i=>{let li=document.createElement("li");li.innerText=i;list.appendChild(li);});
-}
-function toggleCart(){
-let c=document.getElementById("cartBox");
-c.style.display=c.style.display=="block"?"none":"block";
 }
 </script>
 
